--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
         tools:targetApi="31">
         <activity
             android:name=".AddNoteActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity">
+
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
